objects/LLC_BI__Institution__c.object
<CustomObject>
    <description>This object organizes institution-specific data.</description>
    <fields>
        <fullName>LLC_BI__Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Use this lookup field to populate the name of the Brand used to style this Institution.</description>
        <label>Brand</label>
        <referenceTo>nFORCE__Brand__c</referenceTo>
        <relationshipLabel>Institutions</relationshipLabel>
        <relationshipName>Institutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Community_Extension__c</fullName>
        <description>Manually populate this text field to store the Community&apos;s extension.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Community Extension</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Community_Name__c</fullName>
        <description>Manually populate this text field with the name of the Community for this Institution.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Community Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Community_Network_ID__c</fullName>
        <description>Manually populate this text field to store the Community Network ID.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Community Network ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Look_Up_Key__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__LookupKey__c</fullName>
        <description>-DEPRECATED- Deprecated field, no longer in use, replaced by Look_Up_Key__c</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Lookup Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permission_Set__c</fullName>
        <description>Populate this text field with the API name of the permission set used to assign nCino Community Users access to a specific institution.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter the API name of the permission set used to assign nCino Community Users access to a specific institution.</inlineHelpText>
        <label>Permission Set</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Institution</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Institution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Institutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>